fix overlap on displays with a width of <= 768

--- a/public/css/partials/_queries.scss
+++ b/public/css/partials/_queries.scss
@@ -29,3 +29,20 @@ and (orientation : landscape) {
     }
   }
 }
+
+@media screen and ( max-height: 768px ){
+  footer > p {
+    display: none;
+  }
+  #bottom {
+    & > .col:first-child {
+      margin-top:10px !important;
+    }
+    margin-top: 10px !important;
+  }
+  footer address {
+    position: relative;
+    top: 5px;
+  }
+  background: blue;
+}
